--- a/example/package.json
+++ b/example/package.json
@@ -10,10 +10,8 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.82.0",
     "react": "19.1.1",
-    "react-native": "0.82.0",
-    "react-native-safe-area-context": "^5.6.1"
+    "react-native": "0.82.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -22,10 +20,10 @@
     "@react-native-community/cli": "20.0.2",
     "@react-native-community/cli-platform-android": "20.0.2",
     "@react-native-community/cli-platform-ios": "20.0.2",
-    "@react-native/babel-preset": "0.82.0",
-    "@react-native/metro-config": "0.82.0",
-    "@react-native/typescript-config": "0.82.0",
-    "@types/react": "19.1.x",
+    "@react-native/babel-preset": "0.82.1",
+    "@react-native/metro-config": "0.82.1",
+    "@react-native/typescript-config": "0.82.1",
+    "@types/react": "19.1.1",
     "react-native-builder-bob": "^0.40.13",
     "react-native-monorepo-config": "^0.2.2"
   },
