--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-sensitive-info",
   "version": "5.5.8",
-  "description": "Securely store and retrieve sensitive information on React Native with automatic migration, Fabric View support, and improved encryption with random IVs.",
+  "description": "Securely store and retrieve sensitive information on React Native with biometric authentication, AES-256-GCM encryption, and hardware-backed key storage.",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
   "exports": {
@@ -147,23 +147,5 @@
         }
       ]
     ]
-  },
-  "codegenConfig": {
-    "name": "SensitiveInfoViewSpec",
-    "type": "all",
-    "jsSrcsDir": "src",
-    "android": {
-      "javaPackageName": "com.sensitiveinfo"
-    },
-    "ios": {
-      "componentProvider": {
-        "SensitiveInfoView": "SensitiveInfoView"
-      }
-    }
-  },
-  "create-react-native-library": {
-    "languages": "kotlin-objc",
-    "type": "fabric-view",
-    "version": "0.54.7"
   }
 }
