Set noEmit to true in tsconfig.json
Changed the TypeScript compiler option 'noEmit' from false to true to prevent emitting output files during compilation. This is useful for type-checking only workflows.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "compilerOptions": {
     "composite": true,
@@ -9,7 +10,7 @@
     "lib": ["esnext"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": false,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noImplicitUseStrict": false,
