ci: simplify Android and iOS workflows to build only new architecture
Add a dedicated Android "new architecture" job with standard steps (checkout,
setup-node, install deps, codegen, setup JDK 17, cache Gradle, assemble debug).
Remove matrix-based builds and the conditional sed steps that toggled the new
architecture in gradle.properties and Podfile for both Android and iOS.

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -36,6 +36,83 @@ concurrency:
 
 jobs:
   build:
+    name: Build Android Example App (New Architecture)
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: yarn
+
+      - name: Install dependencies (yarn)
+        run: yarn install --frozen-lockfile
+
+      - name: Install example dependencies (yarn)
+        run: cd example && yarn install --frozen-lockfile
+
+      - name: Generate Nitro modules (codegen)
+        run: yarn codegen
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v5
+        with:
+          distribution: zulu
+          java-version: '17'
+          cache: gradle
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('example/android/**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Run Gradle build
+        working-directory: example/android
+        run: ./gradlew assembleDebug --no-daemon --build-cache
+
+      - name: Stop Gradle daemon
+        working-directory: example/android
+        run: ./gradlew --stopname: Build Android
+
+permissions:
+  contents: read
+
+jobs:
+  build:
+    name: Build Android Example App (New Architecture)
+    runs-on: ubuntu-latest
+      - 'nitrogen/generated/android/**'
+      - 'cpp/**'
+      - 'android/**'
+      - '**/yarn.lock'
+      - '**/react-native.config.js'
+      - '**/nitro.json'
+  pull_request:
+    paths:
+      - '.github/workflows/android-build.yml'
+      - 'example/android/**'
+      - '**/nitrogen/generated/shared/**'
+      - '**/nitrogen/generated/android/**'
+      - 'cpp/**'
+      - 'android/**'
+      - '**/yarn.lock'
+      - '**/react-native.config.js'
+      - '**/nitro.json'
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  build:
     name: Build Android Example App (${{ matrix.arch }})
     runs-on: ubuntu-latest
     strategy:
@@ -57,10 +134,6 @@ jobs:
 
       - name: Generate Nitro modules (codegen)
         run: yarn codegen
-
-      - name: Disable new architecture in gradle.properties
-        if: matrix.arch == 'old'
-        run: sed -i "s/newArchEnabled=true/newArchEnabled=false/g" example/android/gradle.properties
 
       - name: Setup JDK 17
         uses: actions/setup-java@v5
