ci: simplify Android workflow to build only new architecture; add example deps install to iOS workflow

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -63,6 +63,9 @@ jobs:
       - name: Install dependencies (yarn)
         run: yarn install --frozen-lockfile
 
+      - name: Install example dependencies (yarn)
+        run: cd example && yarn install --frozen-lockfile
+
       - name: Generate Nitro modules (codegen)
         run: yarn codegen
 
