fix(auth): treat authentication cancellations as soft-failures and map native cancel codes
- Add CODE_OF_CONDUCT
- Bump LICENSE copyright range to 2016-2025
- Android:
  - Introduce SensitiveInfoException.AuthenticationCanceled and throw/resume with it when user cancels biometric/device-credential prompts
  - Simplify device credential flow to always return cipher after prompt
- iOS:
  - Map relevant OSStatus values to an E_AUTH_CANCELED runtime error for friendly messaging
- Internal errors:
  - Add AUTH_CANCELED marker and helper hasErrorMarker/isAuthenticationCanceledError
  - Centralize detection of auth-cancelled errors
- Hooks & utilities:
  - Export and use isAuthenticationCanceledError in error-utils
  - Create user-friendly hook error message for canceled auths and export detector
  - Update hooks (useSecretItem, useHasSecret, useSecureOperation, useSecureStorage, useSecurityAvailability) to treat auth cancellations as non-fatal: preserve/clear state appropriately and avoid surfacing HookError when user dismisses prompts
  - Add applyError helper in useSecureStorage to centralize error handling
  - Update hook types and exports
- Nitro/native layers & types:
  - Type and formatting fixes across sensitive-info.nitro.ts, internal/native, options, core/storage and index exports
- Tests & tooling:
  - Apply consistent code style (semicolons, trailing commas) across tests and configs
  - Update many test files to match changes and ensure behavior for canceled auth flows
- Misc:
  - Update package.json description
  - ESLint config formatting fixes

This change makes authentication prompt cancellations explicit (E_AUTH_CANCELED) and prevents noisy error states in hooks when users dismiss biometric / device credential prompts.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-sensitive-info",
   "version": "6.0.0-rc.8",
-  "description": "react-native-sensitive-info is a react native package built with Nitro",
+  "description": "🔐 React Native secure storage, rebuilt with Nitro Modules ⚡️ Biometric-ready, StrongBox-aware, and metadata-rich for modern mobile apps",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
