fix(ios): run SecItemCopyMatching on main thread and refine auth cancel handling
- Replace direct SecItemCopyMatching calls with performCopyMatching that ensures the Sec API is invoked on the main thread.
- Stop treating errSecInteractionNotAllowed as a user cancellation; only errSecUserCanceled is considered a cancellation.

chore(package): update/normalize keywords in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "keywords": [
     "react-native",
-    "react-native-sensitive-info"
+    "secure-storage",
+    "biometrics",
+    "keychain",
+    "strongbox",
+    "nitro-modules",
+    "sensitive-info"
   ],
   "files": [
     "src",
