feat: restructure app components and implement secure storage functionality
- Refactored the project structure to separate components into a dedicated directory.
- Introduced a new App component with secure storage capabilities using react-native-sensitive-info.
- Added ActionButton, ActionsPanel, Card, Header, ModeSelector, SecretForm, SecretsList components for improved UI and functionality.
- Implemented secure storage logic including saving, revealing, removing, and clearing secrets.
- Enhanced user experience with loading states and error handling.
- Updated configuration files for Babel, Metro, and React Native.
- Added utility functions for error formatting and constants for default values.
- Improved ESLint and Prettier configurations for better code quality.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "release": "semantic-release",
     "build": "npm run typecheck && bob build",
     "codegen": "nitrogen --logLevel=\"debug\" && npm run build && node post-script.js",
+    "lint": "eslint . --fix",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -102,39 +103,17 @@
     "react-native": "*",
     "react-native-nitro-modules": "*"
   },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@react-native",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "warn",
-        {
-          "quoteProps": "consistent",
-          "singleQuote": true,
-          "tabWidth": 2,
-          "trailingComma": "es5",
-          "useTabs": false
-        }
-      ]
-    }
-  },
   "eslintIgnore": [
     "node_modules/",
     "lib/"
   ],
   "prettier": {
-    "quoteProps": "consistent",
     "singleQuote": true,
+    "semi": true,
     "tabWidth": 2,
     "trailingComma": "es5",
     "useTabs": false,
-    "semi": false
+    "quoteProps": "consistent"
   },
   "react-native-builder-bob": {
     "source": "src",
