Refactor access control and metadata handling for platform parity
Unifies and updates access control and metadata management across Android and iOS. Android now uses StorageMetadata directly for metadata encoding/decoding, and access control policies are aligned with iOS, including new enum values and mappings. iOS refactors AccessControlFactory and iOSAccessControlManager to match updated access control policies and simplifies policy resolution. Adds NitroModules imports to iOS files for consistency. Updates .npmignore and package.json to refine published files.

--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "sensitive-info"
   ],
   "files": [
-    "src",
     "react-native.config.js",
     "lib",
-    "nitrogen",
+    "nitrogen/generated",
     "cpp",
     "nitro.json",
     "android/build.gradle",
