--- a/android/build.gradle
+++ b/android/build.gradle
@@ -138,7 +138,7 @@ dependencies {
   // Add a dependency on NitroModules
   implementation project(":react-native-nitro-modules")
 
-  implementation "androidx.biometric:biometric:1.1.0"
+  implementation "androidx.biometric:biometric-ktx:1.4.0-alpha02"
 }
 
 if (isNewArchitectureEnabled()) {
