Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit",
     "clean": "git clean -dfX",
     "release": "semantic-release",
+    "release:it": "release-it --config .release-it.json",
     "build": "npm run typecheck && bob build",
     "codegen": "nitrogen --logLevel=\"debug\" && npm run build && node post-script.js",
     "lint": "eslint . --fix",
@@ -73,6 +74,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "19.2.x",
     "babel-plugin-react-compiler": "^1.0.0",
+    "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.2",
     "eslint-config-airbnb": "^19.0.4",
@@ -95,6 +97,7 @@
     "react-native": "0.83",
     "react-native-builder-bob": "^0.40.17",
     "react-native-nitro-modules": "0.31.10",
+    "release-it": "^19.1.0",
     "semantic-release": "^25.0.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
