fix: add tokenRef for npm access verification in release-it configuration

--- a/.release-it.json
+++ b/.release-it.json
@@ -8,7 +8,8 @@
   },
   "npm": {
     "publish": true,
-    "verifyAccess": true
+    "verifyAccess": true,
+    "tokenRef": "NPM_TOKEN"
   },
   "github": {
     "release": true,
